--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,22 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Register</title>
 </head>
 <body>
     <h1>Register Yourself</h1>
     <form action="register" method="post">
-        Enter First Name:<input type="text" name="firstName"><br>
-        Enter Last Name: <input type="text" name="lastName"><br>
-        Enter DOB: <input type="date" name="dob"><br>
-        Enter Email: <input type="email" name="email"><br>
-        Enter Password: <input type="password" name="password"><br>
-        <button type="submit">Register</button>
-        <button type="reset">Reset</button>
+
+        <div class="input-group mb-3">
+            <span class="input-group-text">Enter First Name</span>
+            <input type="text" name="firstName" class="form-control" placeholder="First Name" required >
+        </div>
+
+        <div class="input-group mb-3">
+            <span class="input-group-text">Enter Last Name</span>
+            <input type="text" name="lastName" class="form-control" placeholder="Last Name" required>
+        </div>
+
+        <div class="input-group mb-3">
+            <span class="input-group-text">Enter DOB</span>
+            <input type="date" name="dob" class="form-control" required>
+        </div>
+
+
+        <div class="input-group mb-3">
+            <span class="input-group-text">Enter your Email</span>
+            <input type="email" name="email" class="form-control" placeholder="yourmail@com" required>
+        </div>
+
+        <div class="input-group mb-3">
+            <span class="input-group-text">Enter password</span>
+            <input type="password" name="password" class="form-control" placeholder="password" required>
+        </div>
+
+        <div class="input-group mb-3">
+            <button class="btn btn-outline-secondary" type="submit">Register</button>
+            <button class="btn btn-outline-secondary" type="reset">Reset</button>
+        </div>
+
     </form>
     <h3>Already Registered ?</h3>
     <form action="login.html">
-        <button type="submit">Login</button>
+        <div class="input-group mb-3">
+            <button class="btn btn-outline-secondary" type="submit">Login</button>
+        </div>
     </form>
 </body>
 </html>
