--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -3,17 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>LogIn</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <h1>LogIn</h1>
     <form action="login" method="post">
-        Enter Email:<input type="email" name="email">
-        Enter Password:<input type="password" name="password">
-        <button type="submit">Login</button>
-        <button type="reset">Reset</button>
+        <div class="input-group mb-3">
+            <span class="input-group-text">Enter your Email</span>
+            <input type="email" name="email" class="form-control" placeholder="yourmail@com" required>
+        </div>
+
+        <div class="input-group mb-3">
+            <span class="input-group-text">Enter password</span>
+            <input type="password" name="password" class="form-control" placeholder="password" required>
+        </div>
+        <div class="input-group mb-3">
+            <button class="btn btn-outline-secondary" type="submit">Log In</button>
+            <button class="btn btn-outline-secondary" type="reset">Reset</button>
+        </div>
     </form>
+    <h2>Not register yet ?</h2>
     <form action="index.html">
-        <button type="submit">Register</button>
+        <button class="btn btn-outline-secondary" type="submit">Register</button>
     </form>
+
+
 </body>
 </html>
