--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -10,12 +10,12 @@
     <form action="login" method="post">
         <div class="input-group mb-3">
             <span class="input-group-text">Enter your Email</span>
-            <input type="email" name="email" class="form-control" placeholder="yourmail@com" required>
+            <input type="email" name="email" class="form-control" placeholder="yourmail@com" >
         </div>
 
         <div class="input-group mb-3">
             <span class="input-group-text">Enter password</span>
-            <input type="password" name="password" class="form-control" placeholder="password" required>
+            <input type="password" name="password" class="form-control" placeholder="password">
         </div>
         <div class="input-group mb-3">
             <button class="btn btn-outline-secondary" type="submit">Log In</button>
